# morpheus

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
src/core/: Config.cpp  Config.hpp  Globals.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp
src/core/Morphology/: MorphemeExtractor.cpp  MorphemeExtractor.hpp  SuffixArray.cpp  SuffixArray.hpp
src/core/Semantics/: Sense.cpp  Sense.hpp
src/core/TableModels/: CharacterModel.hpp  CharacterTransitionModel.hpp  MorphemeModel.hpp
src/ui/: Config.ui  MainWindow.ui
